--- a/vignettes/re_tidy.Rmd
+++ b/vignettes/re_tidy.Rmd
@@ -43,5 +43,6 @@ logRR_phases <- soil_carbon_data |> group_by(phase) |>
   ) |> arrange(match(phase, c("early", "mid", "late")))
 
 knitr::kable(logRR_phases, "pipe")
+# test comment
 ```
 
